<?xml version="1.0" encoding="utf-8"?>
<layout>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:com.example.serviceprovider.app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    com.example.serviceprovider.app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="activity.home.LocationActivity"
    tools:showIn="@layout/activity_location">

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/currentloc"
        android:id="@+id/currentloc"
        android:textSize="@dimen/_12sdp"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
        android:padding="@dimen/_8sdp"
        android:drawableLeft="@drawable/location"
        android:drawablePadding="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginLeft="@dimen/_8sdp"
        android:maxLines="2">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnCurrent"
        android:layout_below="@+id/currentloc"
        android:layout_centerInParent="true"
        android:id="@+id/btn"
        android:fontFamily="@font/txt_bold">
    </androidx.appcompat.widget.AppCompatButton>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/btn"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginBottom="@dimen/_8sdp"
        android:weightSum="7"
        android:id="@+id/linear">

        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1sdp"
            android:background="@color/cardview_shadow_start_color"
            android:layout_gravity="center_vertical"
            android:layout_weight="2">
        </View>
        <androidx.appcompat.widget.AppCompatTextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/or"
            android:textAlignment="center"
            android:layout_weight="3">
        </androidx.appcompat.widget.AppCompatTextView>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/_1sdp"
            android:layout_gravity="center_vertical"
            android:layout_weight="2"
            android:background="@color/cardview_shadow_start_color">
        </View>
    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.AppCompatTextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/anotherloc"
        android:layout_below="@+id/linear"
        android:layout_marginLeft="@dimen/_8sdp"
        android:layout_marginRight="@dimen/_8sdp"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/txt_bold"
        android:id="@+id/txtAnother">
    </androidx.appcompat.widget.AppCompatTextView>

    <androidx.appcompat.widget.SearchView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtAnother"
        android:defaultFocusHighlightEnabled="true"
        com.example.serviceprovider.app:iconifiedByDefault="false"
        com.example.serviceprovider.app:queryHint="@string/searchanother"
        android:layout_marginTop="@dimen/_8sdp"
        android:id="@+id/search">
    </androidx.appcompat.widget.SearchView>

    <androidx.appcompat.widget.AppCompatButton
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/black"
        android:textColor="@color/white"
        android:text="@string/next"
        android:textSize="@dimen/_15sdp"
        android:fontFamily="@font/txt_bold"
        android:id="@+id/next">
    </androidx.appcompat.widget.AppCompatButton>

</RelativeLayout>
</layout>